force-app/main/default/objects/QEM_Deviation__c/QEM_Deviation__c.object-meta.xml
<CustomObject>
    <label>Deviation</label>
    <nameField>
        <label>Deviation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deviations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>