force-app/main/default/objects/QEM_Deviation__c/fields/CMPL123QMS_Description__c.field-meta.xml
<CustomField>
    <fullName>CMPL123QMS_Description__c</fullName>
    <label>CMPL123QMS_Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>