force-app/main/default/objects/QEM_Deviation__c/fields/CMPL123QMS_OOS__c.field-meta.xml
<CustomField>
    <fullName>CMPL123QMS_OOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMPL123QMS_OOS</label>
    <referenceTo>QEM_OOX__c</referenceTo>
    <relationshipLabel>Deviations</relationshipLabel>
    <relationshipName>Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>