force-app/main/default/objects/QEM_Deviation__c/fields/Legacy_Tech_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Tech_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Tech Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>